@@ -1,6 +1,8 @@
 Version 2.0.1
 ~~~~~~~~~~~~~
 Post version 2.0.0
+Add binary message option for testdifxmessagereceive
+Able to make RedHat RPM
 
 Version 2.0.0
 ~~~~~~~~~~~
